assets/css/buddyforms-geo-my-wp.css
.postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-field .spinner,
.the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-field .spinner {
    background: url('/wp-admin/images/wpspin_light.gif') no-repeat;
    background-size: 16px 16px;
    display: none;
    float: right;
    opacity: .7;
    filter: alpha(opacity=70);
    width: 16px;
    height: 16px;
    margin: 5px 5px 0;
}

.postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-field,
.the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-field {
    position: relative;
    display: inline;
    min-height: 1px;
    float: left;
    width: 85%;
    box-sizing: border-box;
}

.postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-controls,
.the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-controls {
    float: right;
    width: 15%;
    box-sizing: border-box;
    position: relative;
    display: inline-flex;
}

.postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-controls > p > a,
.the_buddyforms_form form fieldset .col-xs-12 .container-for-geo-address-controls > p > a {
    cursor: pointer;
}

.postbox-submissions .standard-form .bf-geo-address-fields .container-for-geo-address-field input[type=text].bf-address-autocomplete,
.container-for-geo-address-field .bf-address-autocomplete {
    width: 95%;
}

.postbox-submissions .standard-form .bf_field_group.bf-geo-address-fields {
    height: 50px;
}

.the_buddyforms_form p.bfgmw-action {
    padding: 15px 5px;
}

.buddyforms-metabox p.gmw-lf-field.message,
#buddypress .the_buddyforms_form p.gmw-lf-field.message,
.the_buddyforms_form p.gmw-lf-field.message {
    color: #000;
    clear: both;
    display: inline-table;
    font-size: 0.7rem;
    border-radius: 3px;
    padding: 15px 5px;
}

.buddyforms-metabox [class^=gmw-icon-],
.the_buddyforms_form [class^=gmw-icon-] {
    margin-right: .3em;
}

.bf-geo-address-example {
    display: none;
}

.buddyforms-metabox p.gmw-lf-field.message.changed i.gmw-icon-spin, .buddyforms-metabox p.gmw-lf-field.message.error i.gmw-icon-cancel, .buddyforms-metabox p.gmw-lf-field.message.ok i.gmw-icon-ok-light,
.the_buddyforms_form p.gmw-lf-field.message.changed i.gmw-icon-spin, .the_buddyforms_form p.gmw-lf-field.message.error i.gmw-icon-cancel, .the_buddyforms_form p.gmw-lf-field.message.ok i.gmw-icon-ok-light {
    display: inline-block;
}

.buddyforms-metabox p.gmw-lf-field.message i,
.the_buddyforms_form p.gmw-lf-field.message i {
    display: none;
}

.buddyforms-metabox p.gmw-lf-field.message.error,
#buddypress .the_buddyforms_form p.gmw-lf-field.message.error,
.the_buddyforms_form p.gmw-lf-field.message.error {
    color: #a94442;
    background-color: #f2dede;
}

.buddyforms-metabox p.gmw-lf-field.message.ok,
.the_buddyforms_form p.gmw-lf-field.message.ok {
    display: inline-table;
    color: #3c763d;
    background-color: #dff0d8;
    border-color: #82b77b
}

.buddyforms-metabox p.gmw-lf-field.message.changed,
.the_buddyforms_form p.gmw-lf-field.message.changed {
    color: #31708f;
    background-color: #d9edf7;
    border-color: #bce8f1
}

